# valkompass-ai

./: .env.dist  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  makefile  package-lock.json  package.json  vitest.config.ts
knowledge-base/: .env.dist  README.md  main.py  pyproject.toml  ruff.toml
knowledge-base/analysis/: embedding.py  segmentation.py  topic_modeling.py
knowledge-base/documents/: readme.md
knowledge-base/documents/voting/: .gitignore  parties.json  politicians.json
knowledge-base/graph/: __init__.py
knowledge-base/model/: __init__.py  political_entities.py  store.py
knowledge-base/parser/: __init__.py  json_website_parser.py  pdf_parser.py  voting_parser.py
knowledge-base/structured-knowledge-base/: topics.json
knowledge-base/structured-knowledge-base/documents/: centerpartiet-valmanifest-2022.json  liberalerna-valmanifest-2022.json  liberalernas-partiprogram-2022.json  miljopartiet-valmanifest-2022.json  miljopartiets-partiprogram-2013.json  moderaterna-ideprogram-2021.json  moderaterna-valmanifest-2022.json  moderaterna-webpolicies.json  socialdemokraterna-partiprogram-2013.json  socialdemokraterna-valmanifest-2022.json  socialdemokraterna-webpolicies.json  sverigedemokraterna-valplattform-2022.json  sverigedemokraterna-webpolicies.json  (+3 more)
knowledge-base/tests/: test_embedding.py  test_integration_pipeline.py  test_parsers.py  test_party_processing.py  test_pdf_parser_integration.py  test_political_entities.py  test_schema_manager_parties.py  test_topic_modeling.py
knowledge-base/util/: errors.py
src/app/: globals.css  (+3 more)
(+12461 files in other folders)
