[project]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge base builder for valkompass.ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.5",
    "typer (>=0.16.0,<0.17.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
