[project]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge base builder for valkompass.ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.0",
    "nltk>=3.9.1",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.5",
    "sentence-transformers>=4.1.0",
    "langdetect>=1.0.9",
    "scikit-learn>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
