[project]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge base builder for valkompass.ai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.0",
    "nltk>=3.9.1",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.5",
    "sentence-transformers>=4.1.0",
    "langdetect>=1.0.9",
    "scikit-learn>=1.0",
    "tqdm>=4.67.1",
    "langchain-text-splitters>=0.3.8",
    "einops>=0.8.1",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "spacy>=3.8.7",
    "pip>=25.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]
